--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
             background-color: #c10000; /* Muda para um tom mais escuro de vermelho */
         }
 
-
+mark {
+      background-color: red;
+      color: white; /* Para garantir que o texto seja legível */
+    }
     </style>
 
 </head>
@@ -78,12 +81,16 @@
    <div class="overlay">
         <div class="content">
             <h1>HOMEM-ARANHA</h1>
-            <p>Bem-vindo ao site do Homem-Aranha!</p>
-             <p>Como resultado de uma picada da aranha radioativa, o estudante Peter Parker desenvolveu poderes e habilidades semelhantes aos de uma aranha. Depois que o egoísmo de Peter indiretamente resultou na morte de seu amado Tio Ben, Peter decidiu viver de acordo com o lema de que "com grandes poderes também devem vir grandes responsabilidades", e assim se tornou o super-herói conhecido como Homem-Aranha.
+            <p> <u> Bem-vindo ao site do Homem-Aranha!</u></p>
+             <p>Como resultado de uma picada da aranha radioativa, o estudante Peter Parker desenvolveu poderes e habilidades semelhantes aos de uma aranha. Depois que o egoísmo de Peter indiretamente resultou na morte de seu amado Tio Ben, Peter decidiu viver de acordo com o lema de que "com grandes poderes também devem vir grandes responsabilidades", e assim se tornou o super-herói conhecido como <mark>Homem-Aranha</mark>.
 <a href="paginaprincipal.html" target="_blank">
      
-             	 <button class="btn-continuar">Descubra o Aranhaverso</button>
+             	 <button class="btn-continuar"><i>Descubra o Aranhaverso</i></button>
 </p>
+
+
+
+
         </div>
     </div>
 
@@ -93,6 +100,9 @@
 
 </body>
 </html>
+
+
+
 
 
 
