--- a/paginaprincipal.html
+++ b/paginaprincipal.html
@@ -82,6 +82,30 @@
         img {
             border-radius: 10px;
         }
+
+    /* Estilo para o botão */
+        .btn-continuar {
+            margin-top: 20px; /* Espaço acima do botão */
+            padding: 15px 30px; /* Tamanho do botão */
+            font-size: 1.2em; /* Tamanho da fonte */
+            background-color: red; /* Cor de fundo do botão */
+            color: white; /* Cor do texto do botão */
+            border: none; /* Remove borda */
+            border-radius: 10px; /* Bordas arredondadas */
+            cursor: pointer; /* Aponta o cursor como mãozinha */
+            transition: background-color 0.3s ease; /* Transição suave na cor */
+        }
+
+        /* Efeito de hover para o botão */
+        .btn-continuar:hover {
+            background-color: rgb(13, 26, 206); /* Muda para um tom mais escuro de vermelho */
+        }
+
+
+
+
+
+
     </style>
 </head>
 
@@ -128,6 +152,13 @@
                 <img src="imagens/Dr..jpg" width="150" height="150" />
                 <figcaption><ins>Dr. Octopus Poster</ins></figcaption>
             </figure>
+
+
+ <a href="index.html" target="_blank">
+      
+              	 <button class="btn-continuar"><i>Voltar</i></button>
+     
+
 
         </div>
     </div>
