--- a/paginaprincipal.html
+++ b/paginaprincipal.html
@@ -142,13 +142,13 @@
             </figure>
 
             <figure>
-               <a href="Miguel O'Hara.html" target="_blank">
+               <a href="Miguel-OHara.html" target="_blank">
                 <img src="imagens/miguel.jpg" width="150" height="150" />
                 <figcaption><ins>Miguel O'Hara</ins></figcaption>
             </figure>
 
             <figure>
-               <a href="Dr. Octopus Poster.html" target="_blank">
+               <a href="Dr-Octopus.html" target="_blank">
                 <img src="imagens/Dr..jpg" width="150" height="150" />
                 <figcaption><ins>Dr. Octopus Poster</ins></figcaption>
             </figure>
