--- a/paginaprincipal.html
+++ b/paginaprincipal.html
@@ -144,13 +144,13 @@
             <figure>
                <a href="Miguel-OHara.html" target="_blank">
                 <img src="imagens/miguel.jpg" width="150" height="150" />
-                <figcaption><ins>Miguel O'Hara</ins></figcaption>
+                <figcaption><ins>Miguel-OHara</ins></figcaption>
             </figure>
 
             <figure>
                <a href="Dr-Octopus.html" target="_blank">
                 <img src="imagens/Dr..jpg" width="150" height="150" />
-                <figcaption><ins>Dr. Octopus Poster</ins></figcaption>
+                <figcaption><ins>Dr-Octopus</ins></figcaption>
             </figure>
 
 
