--- a/cadastro.html
+++ b/cadastro.html
@@ -123,14 +123,10 @@
 
         /* Adicionando uma cor de texto legível nos campos de input */
         input, textarea {
-            color: white;
+            color: rgb(221, 10, 10);
         }
 
-        /* Ajuste de contraste no texto */
-        input:focus, textarea:focus {
-            background-color: rgba(255, 255, 255, 0.9); /* melhora a visibilidade do texto */
-            color: black; /* Deixa o texto escuro quando o campo é focado */
-        }
+       
 
     </style>
 </head>
@@ -180,10 +176,11 @@
                 <input type="submit" value="Cadastrar">
                 <input type="reset" value="Limpar">
                 <input type="button" value="Testar" onclick="alert('Você clicou!');">
+               </form>
                 <a href="paginaprincipal.html" target="_blank">
                     <button class="btn-continuar">Voltar</button>
                 </a>
-            </form>
+          
         </div>
     </div>
 </body>
