--- a/paginaprincipal.html
+++ b/paginaprincipal.html
@@ -119,6 +119,21 @@
         }
 
 
+/* Link para a página de Contato - Estilo simples */
+.link-mapa {
+            position: absolute;
+            bottom: 20px; /* Fica no rodapé */
+         right: 20px; /* Alinha à direita */
+            font-size: 1em; /* Tamanho da fonte */
+            color: rgb(221, 19, 19); /* Cor do texto */
+            text-decoration: none; /* Remove o sublinhado */
+        }
+
+        .link-contato:hover {
+            color: red; /* Muda a cor para vermelho quando passa o mouse */
+        }
+
+
     </style>
 </head>
 
@@ -174,7 +189,10 @@
              	 <button class="btn-continuar"><i>Voltar</i></button>
      </a>
             
+     <!-- Link para a página de mapa-->
+  <a href="mapa.html" class="link-mapa">Agora conheça a ambientação dos filmes</a>
 
+      
         </div>
     </div>
 
